progress: Fix IE overflow (#29629)

--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
   color: $progress-bar-color;
   text-align: center;
   white-space: nowrap;
